--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,10 @@ a {
   text-decoration: none;
 }
 
+.main--carrousel {
+  display: none;
+}
+
 /* Eslitos forms*/
 .main--login {
   width: 90%;
@@ -39,13 +43,11 @@ a {
   margin-bottom: 20px;
   font-family: "Cookie", cursive;
   font-weight: 400;
-  font-style: normal;
 }
 
 .main--login .main--title > h1 {
   font-size: 3.4rem;
 }
-
 .login--form {
   width: 90%;
   margin: 0 auto;
@@ -53,7 +55,6 @@ a {
 
 .login--form .form--imput {
   width: 100%;
-  padding: 5px;
   margin: 10px 0;
   border-radius: 4px;
   border: 1px solid var(--gray-color);
@@ -63,13 +64,39 @@ a {
   display: block;
   padding: 10px;
   margin: 0 auto;
-  width: 80px;
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid #4cb5f9;
+  background-color: #4cb5f9;
+  padding: 5px;
+  color: white;
+  font-weight: 600;
+}
+
+.form--input--container {
+  position: relative;
+}
+
+.form--input--container input:focus + span {
+  top: 10%;
+  font-size: 1vw;
+}
+
+.form--input--container span {
+  position: absolute;
+  font-size: 1.2vw;
+  transition: all 0.3s;
+  top: 50%;
+  color: rgb(115, 115, 115);
+  left: 1%;
+  transform: translateY(-50%);
 }
 
 .divisor {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 50px;
 }
 
 .divisor div {
@@ -100,4 +127,85 @@ a {
 .alternative--paragraph {
   text-align: center;
   margin-top: 50px;
+}
+
+.links--paragraph {
+  margin: 50px 0 25px;
+  text-align: center;
+}
+
+.alternative--link--blue {
+  color: var(--blue-color);
+  font-weight: 700;
+}
+
+.login--links .links--paragraph {
+  color: var(--blue-color);
+}
+
+/*Buttons*/
+.links--list {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 30px;
+}
+
+.links--list img {
+  width: 100%;
+  height: 45px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+/*Footer*/
+.footer--list {
+  display: flex;
+  width: 90%;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.footer--list li {
+  margin: 5px;
+}
+
+@media (min-width: 768px) {
+  body {
+    background-color: gainsboro;
+  }
+
+  .main--login {
+    border: 1px solid var(--gray-color);
+    background-color: white;
+    padding: 15px;
+    border-radius: 10px;
+    max-width: 370px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .main {
+    display: flex;
+    align-items: center;
+    width: 82%;
+    margin: 0px auto;
+    max-width: 898px;
+    justify-content: space-between;
+  }
+
+  .main--carrousel {
+    position: relative;
+    display: block;
+    background-image: url(/img/fondo_celular.png);
+    width: 49%;
+    height: 595px;
+  }
+
+  .main--carrousel img {
+    position: absolute;
+    right: 6%;
+    height: 92%;
+    bottom: 4%;
+  }
 }
